Informal v0.2.0 - see Changelog - added more commands

--- a/README.org
+++ b/README.org
@@ -3,7 +3,7 @@
 #+email: captainflasmr@gmail.com
 #+language: en
 #+options: ':t toc:nil author:nil email:nil num:nil title:nil
-#+todo: TODO DOING | DONE
+#+todo: TODO DOING | DONE IGNORE
 #+startup: showall
 
 * WOWEE - Windows Operating With Emacs Enhancements
@@ -18,75 +18,68 @@ WOWEE is a set of AutoHotKey scripts designed to bring Emacs-like commands and k
 - Based on EWOW – Emacs Way of Operating Windows
 - Written in AutoHotKey v2
 - Includes various Emacs style navigation commands
+- Ergonomic keyboard layout options
+- Easily add your own keybindings by modifying AHK files
 
 *** kanban
 
-#+begin: kanban :layout ("..." . 50) :scope nil :range ("TODO" . "DONE") :sort "O" :depth 3 :compressed t
-| TODO                        | DOING                   | DONE                   |
-|-----------------------------+-------------------------+------------------------|
-| [[file:README.org::*scroll_left][scroll_left]]                 | [[file:README.org::*jumping around commands][jumping around commands]] | [[file:README.org::*motion commands][motion commands]]        |
-| [[file:README.org::*scroll_right][scroll_right]]                |                         | [[file:README.org::*forward_char][forward_char]]           |
-| [[file:README.org::*goto_line][goto_line]]                   |                         | [[file:README.org::*backward_char][backward_char]]          |
-| [[file:README.org::*region commands][region commands]]             |                         | [[file:README.org::*forward_word][forward_word]]           |
-| [[file:README.org::*mark_word][mark_word]]                   |                         | [[file:README.org::*backward_word][backward_word]]          |
-| [[file:README.org::*mark_whole_line][mark_whole_line]]             |                         | [[file:README.org::*next_line][next_line]]              |
-| [[file:README.org::*mark_whole_buffer][mark_whole_buffer]]           |                         | [[file:README.org::*previous_line][previous_line]]          |
-| [[file:README.org::*kill_region][kill_region]]                 |                         | [[file:README.org::*scroll_down][scroll_down]]            |
-| [[file:README.org::*yank_pop][yank_pop]]                    |                         | [[file:README.org::*scroll_up][scroll_up]]              |
-| [[file:README.org::*delete_backward_char][delete_backward_char]]        |                         | [[file:README.org::*move_beginning_of_line][move_beginning_of_line]] |
-| [[file:README.org::*kill_word][kill_word]]                   |                         | [[file:README.org::*move_end_of_line][move_end_of_line]]       |
-| [[file:README.org::*backward_kill_word][backward_kill_word]]          |                         | [[file:README.org::*beginning_of_buffer][beginning_of_buffer]]    |
-| [[file:README.org::*kill_whole_line][kill_whole_line]]             |                         | [[file:README.org::*end_of_buffer][end_of_buffer]]          |
-| [[file:README.org::*newline and indent commands][newline and indent commands]] |                         | [[file:README.org::*kill_ring_save][kill_ring_save]]         |
-| [[file:README.org::*newline][newline]]                     |                         | [[file:README.org::*yank][yank]]                   |
-| [[file:README.org::*open_line][open_line]]                   |                         | [[file:README.org::*delete_char][delete_char]]            |
-| [[file:README.org::*indent_for_tab_command][indent_for_tab_command]]      |                         | [[file:README.org::*kill_line][kill_line]]              |
-| [[file:README.org::*delete_indentation][delete_indentation]]          |                         | [[file:README.org::*undo_only][undo_only]]              |
-| [[file:README.org::*edit commands][edit commands]]               |                         | [[file:README.org::*set_mark_command][set_mark_command]]       |
-| [[file:README.org::*redo][redo]]                        |                         | [[file:README.org::*set_cx_command][set_cx_command]]         |
-| [[file:README.org::*transpose_chars][transpose_chars]]             |                         | [[file:README.org::*keyboard_quit][keyboard_quit]]          |
-| [[file:README.org::*transpose_words][transpose_words]]             |                         | [[file:README.org::*save_buffer][save_buffer]]            |
-| [[file:README.org::*transpose_lines][transpose_lines]]             |                         |                        |
-| [[file:README.org::*query_replace][query_replace]]               |                         |                        |
-| [[file:README.org::*search_forward][search_forward]]              |                         |                        |
-| [[file:README.org::*overwrite_mode][overwrite_mode]]              |                         |                        |
-| [[file:README.org::*case conversion commands][case conversion commands]]    |                         |                        |
-| [[file:README.org::*upcase_region][upcase_region]]               |                         |                        |
-| [[file:README.org::*downcase_region][downcase_region]]             |                         |                        |
-| [[file:README.org::*upcase_word][upcase_word]]                 |                         |                        |
-| [[file:README.org::*downcase_word][downcase_word]]               |                         |                        |
-| [[file:README.org::*capitalize_word][capitalize_word]]             |                         |                        |
-| [[file:README.org::*insert pairs commands][insert pairs commands]]       |                         |                        |
-| [[file:README.org::*insert_parentheses][insert_parentheses]]          |                         |                        |
-| [[file:README.org::*insert_comment][insert_comment]]              |                         |                        |
-| [[file:README.org::*indent_new_comment_line][indent_new_comment_line]]     |                         |                        |
-| [[file:README.org::*other commands][other commands]]              |                         |                        |
-| [[file:README.org::*shell][shell]]                       |                         |                        |
-| [[file:README.org::*shell_command][shell_command]]               |                         |                        |
-| [[file:README.org::*facemenu][facemenu]]                    |                         |                        |
-| [[file:README.org::*help][help]]                        |                         |                        |
-| [[file:README.org::*system commands][system commands]]             |                         |                        |
-| [[file:README.org::*ignore][ignore]]                      |                         |                        |
-| [[file:README.org::*repeat][repeat]]                      |                         |                        |
-| [[file:README.org::*digit argument commands][digit argument commands]]     |                         |                        |
-| [[file:README.org::*macro recording commands][macro recording commands]]    |                         |                        |
-| [[file:README.org::*files commands][files commands]]              |                         |                        |
-| [[file:README.org::*write_file][write_file]]                  |                         |                        |
-| [[file:README.org::*find_file][find_file]]                   |                         |                        |
-| [[file:README.org::*dired][dired]]                       |                         |                        |
-| [[file:README.org::*windows frames commands][windows frames commands]]     |                         |                        |
-| [[file:README.org::*kill_frame][kill_frame]]                  |                         |                        |
-| [[file:README.org::*delete_window][delete_window]]               |                         |                        |
-| [[file:README.org::*split_window][split_window]]                |                         |                        |
-| [[file:README.org::*next_window][next_window]]                 |                         |                        |
-| [[file:README.org::*previous_window][previous_window]]             |                         |                        |
-| [[file:README.org::*suspend_frame][suspend_frame]]               |                         |                        |
-| [[file:README.org::*add hooks][add hooks]]                   |                         |                        |
-| [[file:README.org::*add ignore frames][add ignore frames]]           |                         |                        |
-| [[file:README.org::*add goto line][add goto line]]               |                         |                        |
-| [[file:README.org::*add kill ring][add kill ring]]               |                         |                        |
-| [[file:README.org::*add mouse events][add mouse events]]            |                         |                        |
-| [[file:README.org::*add C-x][add C-x]]                     |                         |                        |
+This kanban board is keeping track of those original EWOW functions.
+
+The IGNORE column includes functions that I am definitely not going to implement.
+
+The EXTRA section are additional commands that I am adding.
+
+#+begin: kanban :layout ("..." . 50) :scope nil :range ("TODO" . "IGNORE") :sort "O" :depth 3 :compressed t
+| TODO                         | DOING | DONE                     | IGNORE                   |
+|------------------------------+-------+--------------------------+--------------------------|
+| [[file:README.org::*ADD PROGRAM SPECIFIC PRESETS][ADD PROGRAM SPECIFIC PRESETS]] |       | [[file:README.org::*MOTION COMMANDS][MOTION COMMANDS]]          | [[file:README.org::*- scroll_left][- scroll_left]]            |
+| [[file:README.org::*REGION COMMANDS][REGION COMMANDS]]              |       | [[file:README.org::*- forward_char][- forward_char]]           | [[file:README.org::*- scroll_right][- scroll_right]]           |
+| [[file:README.org::*- mark_word][- mark_word]]                  |       | [[file:README.org::*- backward_char][- backward_char]]          | [[file:README.org::*- open_line][- open_line]]              |
+| [[file:README.org::*- mark_whole_buffer][- mark_whole_buffer]]          |       | [[file:README.org::*- forward_word][- forward_word]]           | [[file:README.org::*- transpose_chars][- transpose_chars]]        |
+| [[file:README.org::*- kill_region][- kill_region]]                |       | [[file:README.org::*- backward_word][- backward_word]]          | [[file:README.org::*- transpose_words][- transpose_words]]        |
+| [[file:README.org::*- yank_pop][- yank_pop]]                   |       | [[file:README.org::*- next_line][- next_line]]              | [[file:README.org::*- transpose_lines][- transpose_lines]]        |
+| [[file:README.org::*- delete_backward_char][- delete_backward_char]]       |       | [[file:README.org::*- previous_line][- previous_line]]          | [[file:README.org::*CASE CONVERSION COMMANDS][CASE CONVERSION COMMANDS]] |
+| [[file:README.org::*- kill_word][- kill_word]]                  |       | [[file:README.org::*JUMPING AROUND COMMANDS][JUMPING AROUND COMMANDS]]  | [[file:README.org::*- upcase_region][- upcase_region]]          |
+| [[file:README.org::*- kill_whole_line][- kill_whole_line]]            |       | [[file:README.org::*- scroll_down][- scroll_down]]            | [[file:README.org::*- downcase_region][- downcase_region]]        |
+| [[file:README.org::*NEWLINE AND INDENT COMMANDS][NEWLINE AND INDENT COMMANDS]]  |       | [[file:README.org::*- scroll_up][- scroll_up]]              | [[file:README.org::*- upcase_word][- upcase_word]]            |
+| [[file:README.org::*- newline][- newline]]                    |       | [[file:README.org::*- move_beginning_of_line][- move_beginning_of_line]] | [[file:README.org::*- downcase_word][- downcase_word]]          |
+| [[file:README.org::*- delete_indentation][- delete_indentation]]         |       | [[file:README.org::*- move_end_of_line][- move_end_of_line]]       | [[file:README.org::*- capitalize_word][- capitalize_word]]        |
+| [[file:README.org::*EDIT COMMANDS][EDIT COMMANDS]]                |       | [[file:README.org::*- beginning_of_buffer][- beginning_of_buffer]]    |                          |
+| [[file:README.org::*- redo][- redo]]                       |       | [[file:README.org::*- end_of_buffer][- end_of_buffer]]          |                          |
+| [[file:README.org::*- query_replace][- query_replace]]              |       | [[file:README.org::*- goto_line][- goto_line]]              |                          |
+| [[file:README.org::*- overwrite_mode][- overwrite_mode]]             |       | [[file:README.org::*- mark_whole_line][- mark_whole_line]]        |                          |
+| [[file:README.org::*INSERT PAIRS COMMANDS][INSERT PAIRS COMMANDS]]        |       | [[file:README.org::*- kill_ring_save][- kill_ring_save]]         |                          |
+| [[file:README.org::*- insert_parentheses][- insert_parentheses]]         |       | [[file:README.org::*- yank][- yank]]                   |                          |
+| [[file:README.org::*- insert_comment][- insert_comment]]             |       | [[file:README.org::*- delete_char][- delete_char]]            |                          |
+| [[file:README.org::*- indent_new_comment_line][- indent_new_comment_line]]    |       | [[file:README.org::*- backward_kill_word][- backward_kill_word]]     |                          |
+| [[file:README.org::*OTHER COMMANDS][OTHER COMMANDS]]               |       | [[file:README.org::*- kill_line][- kill_line]]              |                          |
+| [[file:README.org::*- shell][- shell]]                      |       | [[file:README.org::*- indent_for_tab_command][- indent_for_tab_command]] |                          |
+| [[file:README.org::*- shell_command][- shell_command]]              |       | [[file:README.org::*- undo_only][- undo_only]]              |                          |
+| [[file:README.org::*- facemenu][- facemenu]]                   |       | [[file:README.org::*- search_forward][- search_forward]]         |                          |
+| [[file:README.org::*- help][- help]]                       |       | [[file:README.org::*- set_mark_command][- set_mark_command]]       |                          |
+| [[file:README.org::*SYSTEM COMMANDS][SYSTEM COMMANDS]]              |       | [[file:README.org::*- set_cx_command][- set_cx_command]]         |                          |
+| [[file:README.org::*- ignore][- ignore]]                     |       | [[file:README.org::*- keyboard_quit][- keyboard_quit]]          |                          |
+| [[file:README.org::*- repeat][- repeat]]                     |       | [[file:README.org::*- save_buffer][- save_buffer]]            |                          |
+| [[file:README.org::*DIGIT ARGUMENT COMMANDS][DIGIT ARGUMENT COMMANDS]]      |       | [[file:README.org::*- isearch_backwards][- isearch_backwards]]      |                          |
+| [[file:README.org::*MACRO RECORDING COMMANDS][MACRO RECORDING COMMANDS]]     |       | [[file:README.org::*- recenter_lines][- recenter_lines]]         |                          |
+| [[file:README.org::*FILES COMMANDS][FILES COMMANDS]]               |       |                          |                          |
+| [[file:README.org::*- write_file][- write_file]]                 |       |                          |                          |
+| [[file:README.org::*- find_file][- find_file]]                  |       |                          |                          |
+| [[file:README.org::*- dired][- dired]]                      |       |                          |                          |
+| [[file:README.org::*WINDOWS FRAMES COMMANDS][WINDOWS FRAMES COMMANDS]]      |       |                          |                          |
+| [[file:README.org::*- kill_frame][- kill_frame]]                 |       |                          |                          |
+| [[file:README.org::*- delete_window][- delete_window]]              |       |                          |                          |
+| [[file:README.org::*- split_window][- split_window]]               |       |                          |                          |
+| [[file:README.org::*- next_window][- next_window]]                |       |                          |                          |
+| [[file:README.org::*- previous_window][- previous_window]]            |       |                          |                          |
+| [[file:README.org::*- suspend_frame][- suspend_frame]]              |       |                          |                          |
+| [[file:README.org::*ADD HOOKS][ADD HOOKS]]                    |       |                          |                          |
+| [[file:README.org::*ADD IGNORE FRAMES][ADD IGNORE FRAMES]]            |       |                          |                          |
+| [[file:README.org::*ADD GENERIC GOTO LINE][ADD GENERIC GOTO LINE]]        |       |                          |                          |
+| [[file:README.org::*ADD KILL RING][ADD KILL RING]]                |       |                          |                          |
+| [[file:README.org::*ADD MOUSE EVENTS][ADD MOUSE EVENTS]]             |       |                          |                          |
+| [[file:README.org::*ADD C-X][ADD C-X]]                      |       |                          |                          |
+| [[file:README.org::*EXTRA][EXTRA]]                        |       |                          |                          |
 #+end:
 
 ** Usage
@@ -167,89 +160,94 @@ Enjoy using WOWEE and bring the power of Emacs navigation to your Windows experi
 
 * ROADMAP
 
-** DONE motion commands
-*** DONE forward_char
-*** DONE backward_char
-*** DONE forward_word
-*** DONE backward_word
-*** DONE next_line
-*** DONE previous_line
-** DOING jumping around commands
-*** DONE scroll_down
-*** DONE scroll_up
-*** TODO scroll_left
-*** TODO scroll_right
-*** DONE move_beginning_of_line
-*** DONE move_end_of_line
-*** DONE beginning_of_buffer
-*** DONE end_of_buffer
-*** TODO goto_line
-** TODO region commands
-*** TODO mark_word
-*** TODO mark_whole_line
-*** TODO mark_whole_buffer
-*** DONE kill_ring_save
-*** TODO kill_region
-*** DONE yank
-*** TODO yank_pop
-*** DONE delete_char
-*** TODO delete_backward_char
-*** TODO kill_word
-*** TODO backward_kill_word
-*** DONE kill_line
-*** TODO kill_whole_line
-** TODO newline and indent commands
-*** TODO newline
-*** TODO open_line
-*** TODO indent_for_tab_command
-*** TODO delete_indentation
-** TODO edit commands
-*** DONE undo_only
-*** TODO redo
-*** TODO transpose_chars
-*** TODO transpose_words
-*** TODO transpose_lines
-*** TODO query_replace
-*** TODO search_forward
-*** TODO overwrite_mode
-** TODO case conversion commands
-*** TODO upcase_region
-*** TODO downcase_region
-*** TODO upcase_word
-*** TODO downcase_word
-*** TODO capitalize_word
-** TODO insert pairs commands
-*** TODO insert_parentheses
-*** TODO insert_comment
-*** TODO indent_new_comment_line
-** TODO other commands
-*** TODO shell
-*** TODO shell_command
-*** TODO facemenu
-*** TODO help
-** TODO system commands
-*** TODO ignore
-*** DONE set_mark_command
-*** DONE set_cx_command
-*** DONE keyboard_quit
-*** TODO repeat
-** TODO digit argument commands
-** TODO macro recording commands
-** TODO files commands
-*** DONE save_buffer
-*** TODO write_file
-*** TODO find_file
-*** TODO dired
-** TODO windows frames commands
-*** TODO kill_frame
-*** TODO delete_window
-*** TODO split_window
-*** TODO next_window
-*** TODO previous_window
-*** TODO suspend_frame
-** TODO add hooks
-** TODO add ignore frames
-** TODO add goto line
-** TODO add kill ring
-** TODO add mouse events
-** TODO add C-x
+** TODO EXTRA ERGO PRESET SELECTION
+** TODO ADD PROGRAM SPECIFIC PRESETS
+** DONE MOTION COMMANDS
+*** DONE - forward_char
+*** DONE - backward_char
+*** DONE - forward_word
+*** DONE - backward_word
+*** DONE - next_line
+*** DONE - previous_line
+** DONE JUMPING AROUND COMMANDS
+*** DONE - scroll_down
+*** DONE - scroll_up
+*** IGNORE - scroll_left
+*** IGNORE - scroll_right
+*** DONE - move_beginning_of_line
+*** DONE - move_end_of_line
+*** DONE - beginning_of_buffer
+*** DONE - end_of_buffer
+*** DONE - goto_line
+** TODO REGION COMMANDS
+*** TODO - mark_word
+*** DONE - mark_whole_line
+*** TODO - mark_whole_buffer
+*** DONE - kill_ring_save
+*** TODO - kill_region
+*** DONE - yank
+*** TODO - yank_pop
+*** DONE - delete_char
+*** TODO - delete_backward_char
+*** TODO - kill_word
+*** DONE - backward_kill_word
+*** DONE - kill_line
+*** TODO - kill_whole_line
+** TODO NEWLINE AND INDENT COMMANDS
+*** TODO - newline
+*** IGNORE - open_line
+*** DONE - indent_for_tab_command
+*** TODO - delete_indentation
+** TODO EDIT COMMANDS
+*** DONE - undo_only
+*** TODO - redo
+*** IGNORE - transpose_chars
+*** IGNORE - transpose_words
+*** IGNORE - transpose_lines
+*** TODO - query_replace
+*** DONE - search_forward
+*** TODO - overwrite_mode
+** IGNORE CASE CONVERSION COMMANDS
+*** IGNORE - upcase_region
+*** IGNORE - downcase_region
+*** IGNORE - upcase_word
+*** IGNORE - downcase_word
+*** IGNORE - capitalize_word
+** TODO INSERT PAIRS COMMANDS
+*** TODO - insert_parentheses
+*** TODO - insert_comment
+*** TODO - indent_new_comment_line
+** TODO OTHER COMMANDS
+*** TODO - shell
+*** TODO - shell_command
+*** TODO - facemenu
+*** TODO - help
+** TODO SYSTEM COMMANDS
+*** TODO - ignore
+*** DONE - set_mark_command
+*** DONE - set_cx_command
+*** DONE - keyboard_quit
+*** TODO - repeat
+** TODO DIGIT ARGUMENT COMMANDS
+** TODO MACRO RECORDING COMMANDS
+** TODO FILES COMMANDS
+*** DONE - save_buffer
+*** TODO - write_file
+*** TODO - find_file
+*** TODO - dired
+** TODO WINDOWS FRAMES COMMANDS
+*** TODO - kill_frame
+*** TODO - delete_window
+*** TODO - split_window
+*** TODO - next_window
+*** TODO - previous_window
+*** TODO - suspend_frame
+** TODO ADD HOOKS
+** TODO ADD IGNORE FRAMES
+** TODO ADD GENERIC GOTO LINE
+** TODO ADD KILL RING
+** TODO ADD MOUSE EVENTS
+** TODO ADD C-X
+** TODO EXTRA
+*** DONE - isearch_backwards
+*** DONE - recenter_lines
